--- a/app/src/main/res/layout/activity_body_temperature.xml
+++ b/app/src/main/res/layout/activity_body_temperature.xml
@@ -28,11 +28,11 @@
         app:srcCompat="@drawable/thermometer" />
 
     <TextView
-        android:id="@+id/thermometer_label"
+        android:id="@+id/body_temperature_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="@string/thermometer_label"
+        android:text="@string/body_temperature_label"
         android:textColor="@color/colorBlack"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
         android:layout_marginTop="4dp"
         android:digits="0123456789."
         android:ems="10"
-        android:hint="@string/body_temperature_editor"
+        android:hint="@string/body_temperature_hint"
         android:gravity="center"
         android:inputType="numberDecimal"
         android:letterSpacing="0.1"
@@ -56,7 +56,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/thermometer_label" />
+        app:layout_constraintTop_toBottomOf="@+id/body_temperature_label" />
 
     <Button
         android:id="@+id/jump_to_medical_consultation_button"
